--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,19 @@
 {
-  "name": "Hello World!",
-  "version": "2.0",
+  "name": "thanks owen!!",
+  "version": "1.0",
   "manifest_version": 2,
   "description": "My first Chrome extension.",
+
   "browser_action": {
     "default_icon": "icon.png",
     "popup": "popup.html"
-  }
-}
-
-  "background": {
-    "scripts": ["background.js"],
-    "persistent": false
   },
+
 
     "content_scripts": [
     {
-      "matches": ["http://www.facebook.com/*", "https://www.facebook.com/*"],
+      "matches": ["http://facebook.com/*", "https://www.facebook.com/*"],
       "js": ["content.js"]
     }
-  ],
+  ]
+}
